--- a/src/front/index.scss
+++ b/src/front/index.scss
@@ -516,6 +516,15 @@ textarea {
 }
 
 .for-print {
+  &.canvas {
+    background: white;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  }
+
   &.print-as-a4 {
     height: 29.7cm;
     page-break-inside: avoid;
