--- a/src/front/complect/schedule-widget/days/Day.scss
+++ b/src/front/complect/schedule-widget/days/Day.scss
@@ -86,6 +86,16 @@
             }
         }
 
+        &.individual-replacement {
+            .day-event-wrapper {
+                >.insert-panel {
+                    opacity: 1;
+                    right: 10px;
+                    pointer-events: all;
+                }
+            }
+        }
+
         .day-event-wrapper {
             position: relative;
             margin: .3rem 0;
@@ -178,6 +188,10 @@
     text-align: center;
 }
 
+.movement-here-title {
+    max-width: calc(100vw - 180px);
+}
+
 @keyframes expand-content {
     0% {
         max-height: 0px;
@@ -189,6 +203,3 @@
         opacity: 1;
     }
 }
-
-
-
