--- a/src/front/complect/schedule-widget/days/Day.scss
+++ b/src/front/complect/schedule-widget/days/Day.scss
@@ -14,6 +14,12 @@
         font-size: 1.5rem;
         font-weight: bold;
         color: var(--color--3);
+        top: -10px;
+        background-color: var(--color--5);
+    }
+
+    >.edit-day-panel {
+        z-index: 2;
     }
 
     >.day-info {
@@ -201,5 +207,17 @@
     100% {
         max-height: 90vh;
         opacity: 1;
+    }
+}
+
+.for-print {
+    .ScheduleWidgetDay {
+        margin-top: 0;
+
+        .day-title {
+            background-color: none;
+            background: none;
+            margin-bottom: 30px;
+        }
     }
 }
