SW. atts by rights

--- a/src/front/complect/modal/Modal.scss
+++ b/src/front/complect/modal/Modal.scss
@@ -129,7 +129,8 @@
     }
 
     .modal-body {
-        overflow: auto;
+        overflow-x: hidden;
+        overflow-y: auto;
         max-height: 80vh;
     }
 
