fixes: naming, texts, styles

--- a/src/front/complect/modal/Modal.scss
+++ b/src/front/complect/modal/Modal.scss
@@ -169,6 +169,7 @@
             padding: .5rem 1rem;
             display: inline-block;
             max-width: calc(100vw - 50px);
+            max-height: 95vh;
             border-radius: 5px;
             color: var(--color--3);
             background-color: var(--color--2);
