--- a/src/front/complect/strong-control/field/Multiline.module.scss
+++ b/src/front/complect/strong-control/field/Multiline.module.scss
@@ -1,10 +1,23 @@
 .markdownFieldContent {
-    max-width: 100%;
+    width: 100%;
 
     .imgContainer {
         display: block;
-        max-width: 100%;
-        max-height: 50vh;
+        width: 150px;
+        height: 150px;
         overflow: auto;
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+
+    table {
+        width: 100%;
+        border-spacing: 0;
+
+        &,
+        th,
+        td {
+            border: 1px solid;
+        }
     }
 }
