--- a/src/front/complect/strong-control/field/Multiline.module.scss
+++ b/src/front/complect/strong-control/field/Multiline.module.scss
@@ -1,6 +1,30 @@
 .markdownFieldContent {
     width: 100%;
 
+    >:first-child {
+        margin-top: 0;
+
+        >:first-child {
+            margin-top: 0;
+            padding-top: 0;
+
+            >:first-child {
+                margin-top: 0;
+                padding-top: 0;
+
+                >:first-child {
+                    margin-top: 0;
+                    padding-top: 0;
+
+                    :first-child {
+                        margin-top: 0;
+                        padding-top: 0;
+                    }
+                }
+            }
+        }
+    }
+
     .imgContainer {
         display: block;
         width: 150px;
