SW. icons + text fixes

--- a/src/front/complect/schedule-widget/days/Day.scss
+++ b/src/front/complect/schedule-widget/days/Day.scss
@@ -1,5 +1,7 @@
 .ScheduleWidgetDay {
-    margin-top: 50px;
+    &:not(.past) {
+        margin-top: 50px;
+    }
 
     &.past {
         filter: grayscale(.7);
