--- a/src/front/app/App.scss
+++ b/src/front/app/App.scss
@@ -104,12 +104,42 @@ body {
         }
     }
 
+    .jesmyl-smile-box {
+        pointer-events: none;
+        animation: fade-out 1s forwards;
+        
+        @keyframes fade-out {
+            from {
+                opacity: 1;
+            }
+
+            70% {
+                opacity: 1;
+            }
+
+            to {
+                opacity: 0;
+            }
+        }
+    }
+
     .application-container {
         position: absolute;
         top: 0;
         overflow: hidden;
         height: 100%;
         width: 100vw;
+        animation: blur-in 1s forwards linear;
+
+        @keyframes blur-in {
+            from {
+                filter: blur(50px);
+            }
+
+            to {
+                filter: blur(0px);
+            }
+        }
 
         .collapse-fullscreen-button {
             position: absolute;
