--- a/src/front/complect/schedule-widget/days/Day.scss
+++ b/src/front/complect/schedule-widget/days/Day.scss
@@ -147,7 +147,7 @@
                     max-height: 0px;
                     opacity: 0;
                     overflow: auto;
-                    animation: expand-content .5s ease-in-out forwards;
+                    animation: expand-content .5s cubic-bezier(0.39, 0.58, 0.57, 1) forwards;
                 }
 
                 >.event-header {
@@ -208,8 +208,13 @@
         opacity: 0;
     }
 
+    90% {
+        max-height: 100vh;
+        opacity: 1;
+    }
+
     100% {
-        max-height: 90vh;
+        max-height: 900vh;
         opacity: 1;
     }
 }
