--- a/src/front/index.scss
+++ b/src/front/index.scss
@@ -73,6 +73,11 @@ body {
       border-color: var(--color--1);
       color: var(--color--4);
     }
+
+    .input-keyboard-flash-controlled {
+      background-color: var(--color--1);
+      color: var(--color--3);
+    }
   }
 }
 
