--- a/src/front/components/apps/cm/col/com/Com.scss
+++ b/src/front/components/apps/cm/col/com/Com.scss
@@ -65,6 +65,8 @@
     color: var(--color-far);
     padding-top: .06em;
     transition: padding .2s;
+    padding-bottom: 100px;
+    min-height: 100%;
 }
 
 
