--- a/src/front/components/apps/cm/col/com/block-styles/BlockStyles.scss
+++ b/src/front/components/apps/cm/col/com/block-styles/BlockStyles.scss
@@ -3,6 +3,8 @@
     margin-top: 1em;
     padding-left: 1em;
     white-space: nowrap;
+    text-wrap: balance;
+    word-wrap: normal;
 
     >.header {
         margin-right: 1em;
