Alias. added logic in game

--- a/src/front/components/apps/gamer/games/alias/Alias.scss
+++ b/src/front/components/apps/gamer/games/alias/Alias.scss
@@ -77,3 +77,11 @@
         transition: background .5s;
     }
 }
+
+.my-score-screen {
+    position: absolute;
+    bottom: -1em;
+    left: 0;
+    right: 0;
+    text-align: center;
+}
