--- a/src/front/app/App.scss
+++ b/src/front/app/App.scss
@@ -68,11 +68,17 @@ body {
   @include gap-builder('padding', '-giant');
 
   @mixin numeric-1-9-builder($metric) {
-    @for $i from 1 through 9 {
-      [class~='font-size:#{$i / 10}#{$metric}'] {
-        font-size: #{$i / 10}#{$metric};
-      }
+    $i: 0.1;
 
+    @while $i < 1 {
+      $i: $i + 0.1;
+
+      [class~='font-size:#{$i}#{$metric}'] {
+        font-size: #{$i}#{$metric};
+      }
+    }
+
+    @for $i from 1 through 9 {
       [class~='font-size:#{$i}#{$metric}'] {
         font-size: #{$i}#{$metric};
       }
