--- a/src/front/index.scss
+++ b/src/front/index.scss
@@ -265,10 +265,12 @@ textarea {
   height: 50%;
 }
 
+.full-size,
 .full-width {
   width: 100%;
 }
 
+.full-size,
 .full-height {
   height: 100%;
 }
