feat(react-router): init usage

--- a/src/front/components/apps/cm/col/com/player/ComPlayer.scss
+++ b/src/front/components/apps/cm/col/com/player/ComPlayer.scss
@@ -1,66 +1,7 @@
-.application-container.app_cm {
+.application-container {
   --com-player-size: 30px;
   --com-player-height: var(--com-player-size);
   --com-player-expand-height: calc(var(--com-player-size) * 2);
-
-  .composition-player {
-    transition:
-      opacity 0.2s,
-      margin 0.2s;
-    background: var(--color--2);
-    padding: 0 5px;
-    width: 100%;
-    height: var(--com-player-height);
-    overflow: hidden;
-    font-size: 0.8em;
-    white-space: nowrap;
-
-    &.hidden-controls {
-      justify-content: center;
-      opacity: 0.5;
-      background: rgba(0, 0, 0, 0);
-      padding: 0;
-      width: var(--com-player-size);
-    }
-
-    .current-variant-badge {
-      --size: 1.8em;
-
-      border-radius: 50%;
-      background: var(--color--3);
-      width: var(--size);
-      min-width: var(--size);
-      max-width: var(--size);
-      height: var(--size);
-      min-height: var(--size);
-      max-height: var(--size);
-      color: var(--color--2);
-    }
-
-    .loading-logo {
-      animation: rotate-loading-logo 1s linear infinite;
-    }
-
-    .player-track {
-      position: relative;
-      cursor: pointer;
-      border-radius: 5px;
-      background: var(--color--1);
-      width: calc(100% - 80px);
-      height: 10px;
-      overflow: hidden;
-
-      &:after {
-        position: absolute;
-        top: 0;
-        left: 0;
-        background: var(--color--3);
-        width: var(--track-progress-width);
-        height: 100%;
-        content: '';
-      }
-    }
-  }
 }
 
 @keyframes rotate-loading-logo {
