--- a/src/front/components/apps/cm/editor/col/compositions/EditComposition.scss
+++ b/src/front/components/apps/cm/editor/col/compositions/EditComposition.scss
@@ -1,4 +1,4 @@
-.application-container.app_cm {
+.application-container {
   .edit-composition {
     .cat-list-title {
       background-color: var(--color--2);
