--- a/src/front/components/apps/cm/col/com/Com.scss
+++ b/src/front/components/apps/cm/col/com/Com.scss
@@ -1,8 +1,8 @@
-.application-container.app_cm {
+.application-container {
   &.fullscreen-mode {
     .composition-player {
       opacity: 0;
-      margin-top: -20px;
+      margin-top: calc(0px - var(--com-player-size));
       pointer-events: none;
     }
   }
