feat(FullContent): can be root anchored + usages & sm fxs

--- a/src/front/index.scss
+++ b/src/front/index.scss
@@ -347,10 +347,10 @@ textarea {
 
   &.column {
     flex-direction: column;
-  }
 
-  &.column-reverse {
-    flex-direction: column-reverse;
+    &-reverse {
+      flex-direction: column-reverse;
+    }
   }
 
   &.start {
