--- a/src/front/lib.scss
+++ b/src/front/lib.scss
@@ -33,80 +33,6 @@
   }
 }
 
-.face-item {
-  --size: 2.5em;
-  --logo-border-size: 2px;
-  display: flex;
-
-  position: relative;
-  align-items: center;
-  margin-bottom: calc(var(--logo-border-size) * 2 + 2px);
-  padding: 0 0.4em;
-  height: var(--size);
-
-  &.current {
-    font-weight: bold;
-  }
-
-  [selected-position].face-logo {
-    border-color: var(--color--3);
-
-    &::after {
-      display: flex;
-      position: absolute;
-      right: -2px;
-      bottom: -1px;
-      justify-content: center;
-      align-items: center;
-      border-radius: 50%;
-      background-color: var(--color--3);
-      width: 1.2em;
-      height: 1.2em;
-      content: attr(selected-position);
-      color: var(--color--2);
-      font-size: 0.5em;
-    }
-  }
-
-  .face-wrapper {
-    display: flex;
-    position: relative;
-    align-items: center;
-    height: 100%;
-  }
-
-  .face-wrapper,
-  & {
-    > .face-action {
-      right: 0;
-    }
-
-    > .face-logo {
-      border: solid 4px transparent;
-      border-radius: 50%;
-      background: var(--color--1);
-
-      &.selected {
-        border-color: var(--color--3);
-      }
-    }
-
-    > .face-action,
-    > .face-logo {
-      display: flex;
-      position: absolute;
-      justify-content: center;
-      align-items: center;
-      width: var(--size);
-      height: var(--size);
-    }
-
-    > .face-title {
-      margin-left: calc(2.5em + 1em);
-    }
-  }
-}
-
 .the-icon {
   &.as-button-circle {
     margin: 5px;
@@ -114,4 +40,8 @@
     background: var(--color--2);
     padding: 7px;
   }
+}
+
+.display-none {
+  display: none;
 }
