fix(): com following fix

--- a/src/front/components/apps/cm/col/com/block-styles/BlockStyles.scss
+++ b/src/front/components/apps/cm/col/com/block-styles/BlockStyles.scss
@@ -6,6 +6,10 @@
   text-wrap: balance;
   word-wrap: normal;
 
+  &:has(.styled-header.empty) {
+    margin-top: 0.5em;
+  }
+
   > .header {
     margin-right: 1em;
   }
